# boomerang-plugin

./: .gitignore  .gitignore-juce  .gitmodules  .markdownlint.json  AGENTS.md  BETA2_REBUILD_SUMMARY.md  BoomerangJUCE-README.md  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  GITHUB_ISSUES_TODO.md  GPG_SIGNING_SUCCESS.md  JUCE_TIPS_AND_TRICKS.md  LICENSE  LICENSE.md  MIGRATION_COMPARISON.md  PARAMETER_NOTIFICATION_SUMMARY.md  PR_SUMMARY.md  README.md  REBUILD_BETA2_INSTRUCTIONS.md  ReadMe.md  _codeql_detected_source_root  build-installer.sh  build.sh  dequarantine.sh  test-gpg-signing.sh  uninstall.sh
.github/: copilot-instructions.md
.github/skills/create-release/: SKILL.md
.github/workflows/: build.yml  jekyll-gh-pages.yml  pages-deploy.yml  release.yml
BoomerangJUCE/: .gitignore  CMakeLists.txt  setup.sh
BoomerangJUCE/Source/: LooperEngine.cpp  LooperEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Presets/: Boomerang-1.preset
Scripts/: boomerang-1.cxx  boomerang.cxx  looper-2.cxx  looper.cxx  looper.kuiml
Source/: LooperEngine.cpp  LooperEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
archive/plug-n-script/: boom1.pnscfg  boomerang-1.cxx
archive/plug-n-script-configs/: Boom_1.pnscfg
cmake/: UpdateGitVersion.cmake  git_version.h.in
docs/: GPG_SIGNING.md  GPG_SIGNING_SETUP.md  RELEASE_NOTES_TEMPLATE.md
docs/plans/: 2026-02-02-midi-sync-plan.md
installer-resources/: component.plist  distribution.xml.template  welcome.html.template
midi/: README.md  page0.txt  page1.txt
releases/: v2.0.0-alpha-2-notes.md
releases/v2.0.0-alpha-5/: release-notes.md
